anchar target add fulll website

--- a/service-sample.html
+++ b/service-sample.html
@@ -585,7 +585,7 @@
 
             <div class="bastun__brand__badge bastun__brand__badge__footer">
                 <div class="bastun__brand__badge__inner position-relative">
-                    <a href="/">
+                    <a href="/" target="_blank">
 
                         <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
                         <img class="bbb__icon" src="assets/img/logo/logo/icon.svg" alt="Footer icon badge">
@@ -599,8 +599,8 @@
                         <div class="col-xl-4 col-lg-6 col-md-6" data-aos="fade-up" data-aos-duration="1500">
                             <div class="footer__widget footer__left">
                                 <div class="footer__logo">
-                                    <a class="offcanvas__logo_link" href="/">
-                                        <img src="assets/img/logo/full-logo.svg" alt="">
+                                    <a class="offcanvas__logo_link" href="/" target="_blank">
+                                        <img src="assets/img/logo/full-logo.svg" alt="img-fluid">
                                     </a>
                                 </div>
                                 <div class="footer__text">
@@ -697,7 +697,7 @@
 
                                 </div>
                                 <div class="footer__bottom">
-                                    <a class="default__button" href="contact">CONTACT US</a>
+                                    <a class="default__button" href="contact" target="_blank">CONTACT US</a>
                                 </div>
                             </div>
                         </div>
@@ -709,7 +709,8 @@
                     <div class="row align-items-center">
                         <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                             <div class="copyright__left">
-                                <p>Copyright © 2025 <a href="/">Digitalminds on.</a> All Right Reserved</p>
+                                <p>Copyright © 2025 <a href="/" target="_blank">Digitalminds on.</a> All Right Reserved
+                                </p>
                             </div>
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-12">
