--- a/what-is-mobile-application-development.html
+++ b/what-is-mobile-application-development.html
@@ -585,7 +585,9 @@
                                 <h2>What is Mobile App Development?</h2>
                             </div>
                             <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p><b><a href="mobile-app-development-services" style="color: var(--primaryColor); font-weight: bold;">Mobile application development</a></b>
+                                <p><b><a href="mobile-app-development-services"
+                                            style="color: var(--primaryColor); font-weight: bold;">Mobile application
+                                            development</a></b>
                                     is the process of designing,
                                     developing and
                                     programming software applications that can operate on tablet or smartphone devices.
@@ -742,8 +744,11 @@
                         </div>
                         <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
                             <p>Ensuring people like to spend their time using an app is crucial for its success so
-                                <a href="ui-ux-design" target="_blank" style="font-weight: bold; color: var(--primaryColor);">UX design</a> deals with the development of a pleasant and manageable application
-                                interface for the specified audience.</p>
+                                <a href="ui-ux-design" target="_blank"
+                                    style="font-weight: bold; color: var(--primaryColor);">UX design</a> deals with the
+                                development of a pleasant and manageable application
+                                interface for the specified audience.
+                            </p>
                         </div>
                         <div class="blog__details__heading" data-aos="fade-up" data-aos-duration="1500">
                             <h4>Security Concerns</h4>
@@ -981,7 +986,7 @@
 
                 <div class="bastun__brand__badge bastun__brand__badge__footer">
                     <div class="bastun__brand__badge__inner position-relative">
-                        <a href="/">
+                        <a href="/" target="_blank">
 
                             <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
                             <img class="bbb__icon" src="assets/img/logo/logo/icon.svg" alt="Footer icon badge">
@@ -995,8 +1000,8 @@
                             <div class="col-xl-4 col-lg-6 col-md-6" data-aos="fade-up" data-aos-duration="1500">
                                 <div class="footer__widget footer__left">
                                     <div class="footer__logo">
-                                        <a class="offcanvas__logo_link" href="/">
-                                            <img src="assets/img/logo/full-logo.svg" alt="">
+                                        <a class="offcanvas__logo_link" href="/" target="_blank">
+                                            <img src="assets/img/logo/full-logo.svg" alt="img-fluid">
                                         </a>
                                     </div>
                                     <div class="footer__text">
@@ -1098,7 +1103,7 @@
 
                                     </div>
                                     <div class="footer__bottom">
-                                        <a class="default__button" href="contact">CONTACT US</a>
+                                        <a class="default__button" href="contact" target="_blank">CONTACT US</a>
                                     </div>
                                 </div>
                             </div>
@@ -1110,7 +1115,8 @@
                         <div class="row align-items-center">
                             <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                                 <div class="copyright__left">
-                                    <p>Copyright © 2025 <a href="/">Digitalminds on.</a> All Right Reserved</p>
+                                    <p>Copyright © 2025 <a href="/" target="_blank">Digitalminds on.</a> All Right
+                                        Reserved</p>
                                 </div>
                             </div>
                             <div class="col-xl-6 col-lg-6 col-md-6 col-12">
