--- a/Professional-Web-Development-Company.html
+++ b/Professional-Web-Development-Company.html
@@ -598,7 +598,9 @@
                                 <div class="blog__details__heading" data-aos="fade-up" data-aos-duration="1500">
                                     <h2>Why You Should Hire a Professional Web Development Company</h2>
                                 </div>
-                                <p>Deciding on a proper <a href="web-development-services" target="_blank" style="color: #fe0094; font-weight: bold;">web development</a> agency can have a massive effect on the result
+                                <p>Deciding on a proper <a href="web-development-services" target="_blank"
+                                        style="color: #fe0094; font-weight: bold;">web development</a> agency can have a
+                                    massive effect on the result
                                     of the business. An effective website is one where the customer gets the first
                                     impression of interacting with your organization hence the need to ensure the
                                     website passes this test.
@@ -734,7 +736,9 @@
                         <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
                             <p>Web development is a dynamic field as the development of AI, machine learning and
                                 progressive web apps are the future of this field. Being one of the progressive web
-                                development company in USA <a href="/" target="_blank" style="font-weight: bold; color: #fe0094;"> Digital Minds On</a> always looks forward to implementing these
+                                development company in USA <a href="/" target="_blank"
+                                    style="font-weight: bold; color: #fe0094;"> Digital Minds On</a> always looks
+                                forward to implementing these
                                 trends in our works.</p>
                             <p>Thanks to the growth of the digital market, various companies require convenient tools
                                 for interacting with consumers; for this purpose, they turn to the services of an
@@ -829,7 +833,7 @@
 
                 <div class="bastun__brand__badge bastun__brand__badge__footer">
                     <div class="bastun__brand__badge__inner position-relative">
-                        <a href="/">
+                        <a href="/" target="_blank">
 
                             <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
                             <img class="bbb__icon" src="assets/img/logo/logo/icon.svg" alt="Footer icon badge">
@@ -843,8 +847,8 @@
                             <div class="col-xl-4 col-lg-6 col-md-6" data-aos="fade-up" data-aos-duration="1500">
                                 <div class="footer__widget footer__left">
                                     <div class="footer__logo">
-                                        <a class="offcanvas__logo_link" href="/">
-                                            <img src="assets/img/logo/full-logo.svg" alt="">
+                                        <a class="offcanvas__logo_link" href="/" target="_blank">
+                                            <img src="assets/img/logo/full-logo.svg" alt="img-fluid">
                                         </a>
                                     </div>
                                     <div class="footer__text">
@@ -946,7 +950,7 @@
 
                                     </div>
                                     <div class="footer__bottom">
-                                        <a class="default__button" href="contact">CONTACT US</a>
+                                        <a class="default__button" href="contact" target="_blank">CONTACT US</a>
                                     </div>
                                 </div>
                             </div>
@@ -958,7 +962,8 @@
                         <div class="row align-items-center">
                             <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                                 <div class="copyright__left">
-                                    <p>Copyright © 2025 <a href="/">Digitalminds on.</a> All Right Reserved</p>
+                                    <p>Copyright © 2025 <a href="/" target="_blank">Digitalminds on.</a> All Right
+                                        Reserved</p>
                                 </div>
                             </div>
                             <div class="col-xl-6 col-lg-6 col-md-6 col-12">
