--- a/blog.html
+++ b/blog.html
@@ -733,8 +733,7 @@
                                 data-aos-duration="2500">
                                 <div class="blog__4__single blog__3__single single__transform bg__pink">
                                     <div class="blog__4__img">
-                                        <img src="assets/img/blog/usa_company.png"
-                                            alt="Digital_Marketing">
+                                        <img src="assets/img/blog/usa_company.png" alt="Digital_Marketing">
                                     </div>
                                     <div class="blog__4__time">
                                         <p class="bg__white"><span class="text__gradient">13 January, 2025</span></p>
@@ -819,7 +818,7 @@
 
                 <div class="bastun__brand__badge bastun__brand__badge__footer">
                     <div class="bastun__brand__badge__inner position-relative">
-                        <a href="/">
+                        <a href="/" target="_blank">
 
                             <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
                             <img class="bbb__icon" src="assets/img/logo/logo/icon.svg" alt="Footer icon badge">
@@ -833,8 +832,8 @@
                             <div class="col-xl-4 col-lg-6 col-md-6" data-aos="fade-up" data-aos-duration="1500">
                                 <div class="footer__widget footer__left">
                                     <div class="footer__logo">
-                                        <a class="offcanvas__logo_link" href="/">
-                                            <img src="assets/img/logo/full-logo.svg" alt="">
+                                        <a class="offcanvas__logo_link" href="/" target="_blank">
+                                            <img src="assets/img/logo/full-logo.svg" alt="img-fluid">
                                         </a>
                                     </div>
                                     <div class="footer__text">
@@ -936,7 +935,7 @@
 
                                     </div>
                                     <div class="footer__bottom">
-                                        <a class="default__button" href="contact">CONTACT US</a>
+                                        <a class="default__button" href="contact" target="_blank">CONTACT US</a>
                                     </div>
                                 </div>
                             </div>
@@ -948,7 +947,8 @@
                         <div class="row align-items-center">
                             <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                                 <div class="copyright__left">
-                                    <p>Copyright © 2025 <a href="/">Digitalminds on.</a> All Right Reserved</p>
+                                    <p>Copyright © 2025 <a href="/" target="_blank">Digitalminds on.</a> All Right
+                                        Reserved</p>
                                 </div>
                             </div>
                             <div class="col-xl-6 col-lg-6 col-md-6 col-12">
