--- a/web-development-services.html
+++ b/web-development-services.html
@@ -51,7 +51,7 @@
         !function (f, b, e, v, n, t, s) {
             if (f.fbq) return; n = f.fbq = function () {
                 n.callMethod ?
-                n.callMethod.apply(n, arguments) : n.queue.push(arguments)
+                    n.callMethod.apply(n, arguments) : n.queue.push(arguments)
             };
             if (!f._fbq) f._fbq = n; n.push = n; n.loaded = !0; n.version = '2.0';
             n.queue = []; t = b.createElement(e); t.async = !0;
@@ -969,9 +969,10 @@
         <!-- footer start -->
         <div class="footer position-relative sp_top_250 pink__bg__color" id="footer__area"
             style="background-image: url(assets/img/footer/footer_1.png);">
+
             <div class="bastun__brand__badge bastun__brand__badge__footer">
                 <div class="bastun__brand__badge__inner position-relative">
-                    <a href="/">
+                    <a href="/" target="_blank">
 
                         <img class="bbb__animate" src="assets/img/footer/brand__badge.png" alt="Footer badge">
                         <img class="bbb__icon" src="assets/img/logo/logo/icon.svg" alt="Footer icon badge">
@@ -985,8 +986,8 @@
                         <div class="col-xl-4 col-lg-6 col-md-6" data-aos="fade-up" data-aos-duration="1500">
                             <div class="footer__widget footer__left">
                                 <div class="footer__logo">
-                                    <a class="offcanvas__logo_link" href="/">
-                                        <img src="assets/img/logo/full-logo.svg" alt="">
+                                    <a class="offcanvas__logo_link" href="/" target="_blank">
+                                        <img src="assets/img/logo/full-logo.svg" alt="img-fluid">
                                     </a>
                                 </div>
                                 <div class="footer__text">
@@ -1083,7 +1084,7 @@
 
                                 </div>
                                 <div class="footer__bottom">
-                                    <a class="default__button" href="contact">CONTACT US</a>
+                                    <a class="default__button" href="contact" target="_blank">CONTACT US</a>
                                 </div>
                             </div>
                         </div>
@@ -1095,7 +1096,8 @@
                     <div class="row align-items-center">
                         <div class="col-xl-6 col-lg-6 col-md-6 col-12">
                             <div class="copyright__left">
-                                <p>Copyright © 2025 <a href="/">Digitalminds on.</a> All Right Reserved</p>
+                                <p>Copyright © 2025 <a href="/" target="_blank">Digitalminds on.</a> All Right Reserved
+                                </p>
                             </div>
                         </div>
                         <div class="col-xl-6 col-lg-6 col-md-6 col-12">
