--- a/project.html
+++ b/project.html
@@ -368,11 +368,11 @@
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
-                                    <h3><a href="https://roilevelup.com/">Level Up Your Business - SaaS Tools and Growth
+                                    <h3><a href="https://roilevelup.com/" target="_blank">Level Up Your Business - SaaS Tools and Growth
                                             Consulting</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="https://roilevelup.com/"><svg
+                                    <a class="direction__btn direction__btn--2" href="https://roilevelup.com/" target="_blank"><svg
                                             width="34" height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
@@ -397,11 +397,11 @@
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
-                                    <h3><a href="https://app.thepathfinderhub.com/">Resume Builder</a></h3>
+                                    <h3><a href="https://app.thepathfinderhub.com/" target="_blank">Resume Builder</a></h3>
                                 </div>
                                 <div class="project__icon">
                                     <a class="direction__btn direction__btn--2"
-                                        href="https://app.thepathfinderhub.com/"><svg width="34" height="34"
+                                        href="https://app.thepathfinderhub.com/" target="_blank"><svg width="34" height="34"
                                             viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                                 stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
@@ -424,11 +424,11 @@
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
-                                    <h3><a href="https://shortlistme.com/">Skill-First Job Search Portal India |
+                                    <h3><a href="https://shortlistme.com/" target="_blank">Skill-First Job Search Portal India |
                                             ShortlistMe</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="https://shortlistme.com/"><svg
+                                    <a class="direction__btn direction__btn--2" href="https://shortlistme.com/" target="_blank"><svg
                                             width="34" height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
@@ -452,11 +452,11 @@
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
-                                    <h3><a href="https://superbullionwire.com/">Super Bullion Wire</a></h3>
+                                    <h3><a href="https://superbullionwire.com/" target="_blank">Super Bullion Wire</a></h3>
                                 </div>
                                 <div class="project__icon">
                                     <a class="direction__btn direction__btn--2"
-                                        href="https://superbullionwire.com/"><svg width="34" height="34"
+                                        href="https://superbullionwire.com/" target="_blank"><svg width="34" height="34"
                                             viewBox="0 0 34 34" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
                                                 stroke-width="1.5" stroke-miterlimit="10" stroke-linecap="round"
@@ -479,11 +479,11 @@
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
-                                    <h3><a href="https://www.peglobal.net/">International Recruitment Agency Ireland &
+                                    <h3><a href="https://www.peglobal.net/" target="_blank">International Recruitment Agency Ireland &
                                             UK | Cork & Dublin</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="https://www.peglobal.net/"><svg
+                                    <a class="direction__btn direction__btn--2" href="https://www.peglobal.net/" target="_blank"><svg
                                             width="34" height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
@@ -507,11 +507,11 @@
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
-                                    <h3><a href="https://www.amberoil.ie/">Heating Oil & Agri Diesel Supplier in North
+                                    <h3><a href="https://www.amberoil.ie/" target="_blank">Heating Oil & Agri Diesel Supplier in North
                                             Cork & Beyond | Amber Oil</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="https://www.amberoil.ie/"><svg
+                                    <a class="direction__btn direction__btn--2" href="https://www.amberoil.ie/" target="_blank"><svg
                                             width="34" height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
@@ -535,11 +535,11 @@
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
-                                    <h3><a href="https://www.mcci.ie/">Large Scale Microelectronics Technology Centre -
+                                    <h3><a href="https://www.mcci.ie/" target="_blank">Large Scale Microelectronics Technology Centre -
                                             MCCI</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="https://www.mcci.ie/"><svg
+                                    <a class="direction__btn direction__btn--2" href="https://www.mcci.ie/" target="_blank"><svg
                                             width="34" height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
@@ -563,10 +563,10 @@
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
-                                    <h3><a href="https://www.ikc.ie/">Home | The Irish Kennel Club</a></h3>
+                                    <h3><a href="https://www.ikc.ie/" target="_blank">Home | The Irish Kennel Club</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="https://www.ikc.ie/"><svg
+                                    <a class="direction__btn direction__btn--2" href="https://www.ikc.ie/" target="_blank"><svg
                                             width="34" height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
@@ -589,10 +589,10 @@
                             </div>
                             <div class="project__content">
                                 <div class="project__heading">
-                                    <h3><a href="http://82.112.240.94:5173/">Heraklean</a></h3>
+                                    <h3><a href="http://82.112.240.94:5173/" target="_blank">Heraklean</a></h3>
                                 </div>
                                 <div class="project__icon">
-                                    <a class="direction__btn direction__btn--2" href="http://82.112.240.94:5173/"><svg
+                                    <a class="direction__btn direction__btn--2" href="http://82.112.240.94:5173/" target="_blank"><svg
                                             width="34" height="34" viewBox="0 0 34 34" fill="none"
                                             xmlns="http://www.w3.org/2000/svg">
                                             <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574" stroke="#0A0624"
