--- a/about.html
+++ b/about.html
@@ -334,7 +334,7 @@
                             </div>
                             <div class="breadcrumbarea__inner">
                                 <ul>
-                                    <li><a href="/">Home</a></li>
+                                    <li><a href="/" target="_blank">Home</a></li>
                                     <li>// </li>
                                     <li>About us</li>
                                 </ul>
@@ -380,7 +380,7 @@
                                             <span>03</span>
                                             <p>Years Experience</p>
                                             <div class="about__number__icon">
-                                                <a href="#"> <svg width="34" height="34" viewBox="0 0 34 34" fill="none"
+                                                <a href="about" target="_blank"> <svg width="34" height="34" viewBox="0 0 34 34" fill="none"
                                                         xmlns="http://www.w3.org/2000/svg">
                                                         <path d="M14.4258 10.9897L23.0101 10.9897L23.0101 19.574"
                                                             stroke="#0A0624" stroke-width="1.5" stroke-miterlimit="10"
@@ -405,7 +405,7 @@
 
                                         </div>
                                         <div class="about__button">
-                                            <a class="default__button" href="contact">LEARN MORE ABOUT</a>
+                                            <a class="default__button" href="contact" target="_blank">LEARN MORE ABOUT</a>
                                         </div>
                                     </div>
                                 </div>
@@ -815,7 +815,7 @@
                                     trends and business management ideas.</p>
                             </div>
                             <div class="section__title__button">
-                                <a class="default__button" href="blog">VIEW ARCHIVE POST</a>
+                                <a class="default__button" href="blog" target="_blank">VIEW ARCHIVE POST</a>
                             </div>
 
                         </div>
@@ -830,14 +830,14 @@
                                 <p><span class="text__gradient">08 May, 2024</span></p>
                             </div>
                             <div class="blog__4__heading">
-                                <h6><a href="what-is-mobile-application-development">What is Mobile APP Development?</a>
+                                <h6><a href="what-is-mobile-application-development" target="_blank">What is Mobile APP Development?</a>
                                 </h6>
                             </div>
                             <div class="blog__4__text">
                                 <p>Mobile application development is the process of designing, developing..</p>
                             </div>
                             <div class="blog__4__button">
-                                <a class="default__button btn__black" href="what-is-mobile-application-development">READ
+                                <a class="default__button btn__black" href="what-is-mobile-application-development" target="_blank">READ
                                     MORE</a>
                             </div>
                         </div>
@@ -848,16 +848,16 @@
                                 <img src="assets/img/blog/Web-blog.webp" alt="image">
                             </div>
                             <div class="blog__4__time">
-                                <p><span class="text__gradient ">08 May, 2024</span></p>
+                                <p><span class="text__gradient">08 May, 2024</span></p>
                             </div>
                             <div class="blog__4__heading">
-                                <h6><a href="web-development-services">What is Web Development?</a></h6>
+                                <h6><a href="web-development-services" target="_blank">What is Web Development?</a></h6>
                             </div>
                             <div class="blog__4__text">
                                 <p>Web development is the process of creating and maintaining websites...</p>
                             </div>
                             <div class="blog__4__button">
-                                <a class="default__button btn__black" href="web-development-services">READ MORE</a>
+                                <a class="default__button btn__black" href="web-development-services" target="_blank">READ MORE</a>
                             </div>
                         </div>
                     </div>
