--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                         <div class="headerarea__component__wrap">
                             <div class="headerarea__component">
                                 <div class="headerarea__logo">
-                                    <a href="/" target="_blank">
+                                    <a href="/">
                                         <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo"
                                             class="dark-mode">
                                         <img src="assets/img/logo/header/logo-local-host new.svg"
@@ -195,7 +195,7 @@
                                         <ul>
                                             <li
                                                 class="headerarea__common__dropdown headerarea__mega__menu position-static">
-                                                <a class="headerarea__has__dropdown" href="/" target="_blank">HOME
+                                                <a class="headerarea__has__dropdown" href="/">HOME
                                                 </a>
 
 
@@ -262,7 +262,7 @@
             <div class="mob_menu_wrapper container-fluid">
                 <div class="d-flex justify-content-between align-items-center">
                     <div class="mobile__log">
-                        <a class="offcanvas__logo_link" href="/" target="_blank">
+                        <a class="offcanvas__logo_link" href="/">
                             <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo" class="dark-mode">
                             <img src="assets/img/logo/header/logo-local-host new.svg" alt="Digitalminds-logo"
                                 class="light-mode">
@@ -297,7 +297,7 @@
                 <nav class="offcanvas__menu">
                     <ul class="offcanvas__menu_ul">
                         <li class="offcanvas__menu_li">
-                            <a class="offcanvas__menu_item" href="/" target="_blank">Home</a>
+                            <a class="offcanvas__menu_item" href="/">Home</a>
                         </li>
                         <li class="offcanvas__menu_li">
                             <a class="offcanvas__menu_item" href="javascript:void(0);">Pages</a>
@@ -1581,7 +1581,7 @@
                                 <div class="footer__menu">
                                     <ul>
                                         <li>
-                                            <a href="/" target="_blank">Home</a>
+                                            <a href="/">Home</a>
                                         </li>
                                         <li>
                                             <a href="about" target="_blank">About us</a>
