--- a/about.html
+++ b/about.html
@@ -334,7 +334,7 @@
                             </div>
                             <div class="breadcrumbarea__inner">
                                 <ul>
-                                    <li><a href="/" target="_blank">Home</a></li>
+                                    <li><a href="/">Home</a></li>
                                     <li>// </li>
                                     <li>About us</li>
                                 </ul>
@@ -947,7 +947,7 @@
                                 <div class="footer__menu">
                                     <ul>
                                         <li>
-                                            <a href="/" target="_blank">Home</a>
+                                            <a href="/">Home</a>
                                         </li>
                                         <li>
                                             <a href="about" target="_blank">About us</a>
