--- a/contact.html
+++ b/contact.html
@@ -332,7 +332,7 @@
         <!-- End Offcanvas header menu -->
 
         <!-- breadcrumbarea__start -->
-        <div class="breadcrumbarea aos-init aos-animate" data-aos="fade-up"
+        <!-- <div class="breadcrumbarea aos-init aos-animate" data-aos="fade-up"
             style="background: url(assets/img/about/contact-scaled.webp); background-size: cover;">
             <div class="container">
                 <div class="row">
@@ -352,7 +352,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
         <!-- breadcrumbarea__end -->
         <!-- contact__section__start -->
         <div class="contact sp_top_140 sp_bottom_80">
