--- a/what-is-mobile-application-development.html
+++ b/what-is-mobile-application-development.html
@@ -586,7 +586,7 @@
                             </div>
                             <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
                                 <p><b><a href="mobile-app-development-services"
-                                            style="color: var(--primaryColor); font-weight: bold;">Mobile application
+                                            style="color: var(--primaryColor); font-weight: bold;" target="_blank">Mobile application
                                             development</a></b>
                                     is the process of designing,
                                     developing and
@@ -639,7 +639,7 @@
                             </div>
 
                             <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p>UI design entails the graphical and the actual arrangement of the card that is used
+                                <p><a href="ui-ux-design" style="font-weight: bold; color: #FE0094;" target="_blank">UI design</a> entails the graphical and the actual arrangement of the card that is used
                                     in developing the app and one that has to incite the visibility of the brand. This
                                     stage uses wireframes, mockups and prototypes as common tools in the process.</p>
                             </div>
