--- a/what-is-software-development.html
+++ b/what-is-software-development.html
@@ -646,14 +646,14 @@
 
 
                             <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p>There are several types of software development, each catering to specific needs:</p>
+                                <p>There are several types of <a href="software-development-services" style="font-weight: bold; color: #FE0094;" target="_blank">software development,</a> each catering to specific needs:</p>
                             </div>
                             <div class="blog__details__heading" data-aos="fade-up" data-aos-duration="1500">
                                 <h4>Web Development</h4>
                             </div>
 
                             <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
-                                <p>Web development can be defined as building web sites and applications, which are
+                                <p><a href="web-development-services" style="font-weight: bold; color: #FE0094;" target="_blank">Web development</a> can be defined as building web sites and applications, which are
                                     installed in the world wide web. it can be sub-categorized as front end development
                                     which is concerned with the graphic and interface of a web site and the back end
                                     development which concerns with the working of the web site on the server.</p>
@@ -671,7 +671,7 @@
                         <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
                             <p>Smartphone and tablet application development is more concerned with developing
                                 applications for these two devices. These applications can be developed to be used
-                                on the Android, IOS and other platforms among them.</p>
+                                on the <a href="mobile-app-development-services" style="font-weight: bold; color: #FE0094;" target="_blank">Android, IOS</a> and other platforms among them.</p>
                         </div>
                         <div class="blog__details__heading" data-aos="fade-up" data-aos-duration="1500">
                             <h4>Desktop Software Development</h4>
