--- a/Professional-Web-Development-Company.html
+++ b/Professional-Web-Development-Company.html
@@ -588,7 +588,7 @@
                                     website users looking for customized and easy to use websites, it is imperative to
                                     incorporate a unique service provider who is a web development company in USA.
                                 </p>
-                                <p>Affordable professional web design company is what Digital Minds On boasts of, making
+                                <p>Affordable professional web design company is what <a href="/" style="font-weight: bold; color: #FE0094;" target="_blank">Digital Minds On</a> boasts of, making
                                     it among the best web development companies in USA for custom web developing
                                     services. Whether it’s a distinct customized or a progressive Website Design, we
                                     guarantee that your web design not only gets you the looks you want but the
