--- a/What-is-application-development-a-detailed-guide-to-2025.html
+++ b/What-is-application-development-a-detailed-guide-to-2025.html
@@ -587,7 +587,7 @@
                                     come to rely on application development services companies. A leading player in the
                                     field, Digital Minds On offers a spectrum of development services to serve different
                                     business requirements. Come with me, we will discuss different types of application
-                                    development services, their advantages and how Digital Minds On helps businesses
+                                    development services, their advantages and how <a href="/" style="font-weight: bold; color: #FE0094;" target="_blank">Digital Minds On</a> helps businesses
                                     reach their objectives through latest technologies.</p>
                             </div>
                             <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
@@ -608,7 +608,7 @@
                                 <p>
                                     With businesses trying to establish a direct connection with users by means of their
                                     smartphones or tablets, mobile applications have become an integral part of them.
-                                    The demand for ‘custom mobile app development services has increased massively due
+                                    The demand for ‘custom <a href="mobile-app-development-services" style="font-weight: bold; color: #FE0094;" target="_blank">mobile app development services</a> has increased massively due
                                     to the rise of smartphone.
                                 </p>
                                 <p>Digital Minds On also gives you a comprehensive list of mobile app development
@@ -722,7 +722,7 @@
                             <p> Application development is a big, big world. Businesses have the options to operate
                                 better, engage customers and achieve goals by focusing in on categories such as, desktop
                                 application development services and web application development services.</p>
-                            <p>Digital Minds On is committed to offering the best professional services that are
+                            <p><a href="/" style="font-weight: bold; color: #FE0094;" target="_blank">Digital Minds On</a> is committed to offering the best professional services that are
                                 tailored to meet the needs of our diverse clients. By joining us, you open doors to
                                 cutting edge technology that continues to drive success. Contact Digital Minds On see
                                 how our experience in application development services companies can make a difference
