--- a/digital-marketing-and-advertising-company.html
+++ b/digital-marketing-and-advertising-company.html
@@ -624,7 +624,7 @@
                                 </p>
                                 <p>The best digital marketing companies use innovative tools and metrics in evaluating
                                     different aspects of their campaign. They work on each invest that you make to get
-                                    the maximum return from SEO to the social media advertisements. When it comes to
+                                    the maximum return from <a href="seo-services" style="font-weight: bold; color: #FE0094;" target="_blank">SEO</a> to the social media advertisements. When it comes to
                                     such level of proficiency, companies can be confident their online image is in safe
                                     hands.
                                 </p>
@@ -642,7 +642,7 @@
                                     campaigns are done through research. Most of these companies refine their strategies
                                     regularly depending on the newest trends and algorithm.
                                 </p>
-                                <p>When businesses are searching for “digital marketing company near me”, it can also
+                                <p>When businesses are searching for “<a href="digital-marketing-services" style="font-weight: bold; color: #FE0094;" target="_blank">digital marketing</a> company near me”, it can also
                                     mean better work relationships and a better insight into the local market. It can be
                                     observed that such localized emphasis is often related to improved campaigns which
                                     have better appeal and thus more interaction.</p>
