--- a/what-is-software-development-a-comprehensive-guide.html
+++ b/what-is-software-development-a-comprehensive-guide.html
@@ -584,7 +584,7 @@
 
                             <div class="blog__details__text" data-aos="fade-up" data-aos-duration="1500">
                                 <p> From the app on your phone to the system powering your favorite website or the tools
-                                    behind that business you run, software development is the skeleton of modern
+                                    behind that business you run, <a href="software-development-services" style="font-weight: bold; color: #FE0094;" target="_blank">software development</a> is the skeleton of modern
                                     technology. When it comes to software development it’s no surprise this is an
                                     important service in keeping a business up to date and growing, and as Minds On, we
                                     understand that.</p>
@@ -691,7 +691,7 @@
                         </div>
 
                         <div class="blog__details__heading" data-aos="fade-up" data-aos-duration="1500">
-                            <p>Minds On recognizes that businesses will not survive in today’s market without tailored
+                            <p><a href="/" style="font-weight: bold; color: #FE0094;" target="_blank">Minds On</a> recognizes that businesses will not survive in today’s market without tailored
                                 software solutions. The experts on our team work with our clients closely to deliver
                                 quality software that addresses their challenges as well as goals.</p>
                             <p>We aim at delivering full end to end services from planning, feature development to
@@ -722,7 +722,7 @@
                                 because we aim to provide the best performance. We have experts who are passionate
                                 enough that we always make sure that our clients get solutions that will drive growth
                                 and success. If you are ready to write new software or further develop existing systems,
-                                help is on hand from Minds On with the complexities of software development.</p>
+                                help is on hand from <a href="/" style="font-weight: bold; color: #FE0094;" target="_blank">Minds On</a> with the complexities of software development.</p>
                         </div>
                         <div class="blog__details__social__icon" data-aos="fade-up" data-aos-duration="1500">
                             <ul>
