--- a/services.html
+++ b/services.html
@@ -424,7 +424,7 @@
                             class="service__single__wraper service__single__wraper--2 common__gradient__bg single__transform">
                             <div class="service__single__inner">
                                 <div class="service__img">
-                                    <img src="assets/img/service/services_2/app.webp" alt="img">
+                                    <img src="assets/img/service/services_2/Mobile_service.png" alt="img">
                                 </div>
                                 <div class="service__content">
                                     <div class="service__heading">
