--- a/our_services.html
+++ b/our_services.html
@@ -462,7 +462,7 @@
                                 class="service__single__wraper service__single__wraper--2 common__gradient__bg single__transform">
                                 <div class="service__single__inner">
                                     <div class="service__img">
-                                        <img src="assets/img/service/services_2/app.webp" alt="img" loading="lazy"
+                                        <img src="assets/img/service/services_2/Mobile_service.png" alt="img" loading="lazy"
                                             class="lazy-load">
                                     </div>
                                     <div class="service__content">
@@ -762,7 +762,7 @@
         <div class="all__project sp_top_140 sp_bottom_140 special__spacing" data-scroll="4" id="portfolio">
             <div class="container">
                 <div class="row">
-
+                    <h3 style="text-align: center; margin-bottom: 30px;">Portfolio</h3>
                     <div class="col-xl-6 col-lg-6 col-md-6 col-sm-6 col-12 aos-init aos-animate" data-aos="fade-up"
                         data-aos-duration="1500">
                         <div class="project__single single__transform">
@@ -1279,7 +1279,7 @@
         <!-- Portiflio end -->
         <!-- testimoial -->
         <section class="slide-testimonal" data-scroll="5" id="testimonal">
-            <div class="testimonial sp_top_140 sp_bottom_140">
+            <div class="testimonial sp_bottom_140">
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-12 aos-init aos-animate" data-aos="fade-up" data-aos-duration="1500">
