--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
 
         <!-- header start -->
 
+     
         <header>
             <div class="headerarea headerarea--1 headerarea__transparent header__sticky main__header ">
                 <div class="container desktop__menu__wrapper">
@@ -202,41 +203,41 @@
                                             </li>
 
                                             <li class="headerarea__common__dropdown"><a
-                                                    class="headerarea__has__dropdown" href="services" target="_blank">Services
+                                                    class="headerarea__has__dropdown" href="services">Services
                                                     <i class="icofont-long-arrow-down"></i></a>
                                                 <ul
                                                     class="headerarea__submenu headerarea__submenu--five--wrap service-scrollbar">
 
-                                                    <li><a href="web-development-services" target="_blank">Web Development</a></li>
-                                                    <li><a href="software-development-services" target="_blank">Software Development</a>
+                                                    <li><a href="web-development-services">Web Development</a></li>
+                                                    <li><a href="software-development-services">Software Development</a>
                                                     </li>
-                                                    <li><a href="mobile-app-development-services" target="_blank">App Development</a>
+                                                    <li><a href="mobile-app-development-services">App Development</a>
                                                     </li>
-                                                    <li><a href="game-development-services" target="_blank">Game Development</a></li>
-                                                    <li><a href="digital-marketing-services" target="_blank">Digital Marketing</a></li>
-                                                    <li><a href="ui-ux-design" target="_blank">UI/UX Design</a></li>
-                                                    <li><a href="network-services" target="_blank">IT Specialist</a></li>
-                                                    <li><a href="wordpress-development-services" target="_blank">WordPress Development
+                                                    <li><a href="game-development-services">Game Development</a></li>
+                                                    <li><a href="digital-marketing-services">Digital Marketing</a></li>
+                                                    <li><a href="ui-ux-design">UI/UX Design</a></li>
+                                                    <li><a href="network-services">IT Specialist</a></li>
+                                                    <li><a href="wordpress-development-services">WordPress Development
                                                         </a></li>
-                                                    <li><a href="content-creater" target="_blank">Content Creator</a></li>
-                                                    <li><a href="seo-services" target="_blank">Search Engine Optimization(SEO)</a></li>
+                                                    <li><a href="content-creater">Content Creator</a></li>
+                                                    <li><a href="seo-services">Search Engine Optimization(SEO)</a></li>
 
                                                 </ul>
 
                                             </li>
 
                                             <!-- <li><a href="#">Careers </a></li> -->
-                                            <li><a href="blog" target="_blank">BLOG </a></li>
-                                            <li><a href="project" target="_blank">Portfolio </a></li>
+                                            <li><a href="blog">BLOG </a></li>
+                                            <li><a href="project">Portfolio </a></li>
 
 
                                             <li class="headerarea__common__dropdown"><a
-                                                    class="headerarea__has__dropdown" href="contact" target="_blank">CONTACT
+                                                    class="headerarea__has__dropdown" href="contact">CONTACT
                                                     <i class="icofont-long-arrow-down"></i></a>
                                                 <ul class="headerarea__submenu headerarea__submenu--five--wrap">
 
-                                                    <li><a href="about" target="_blank">ABOUT </a></li>
-                                                    <li><a href="team" target="_blank">Team </a></li>
+                                                    <li><a href="about">ABOUT </a></li>
+                                                    <li><a href="team">Team </a></li>
 
                                                 </ul>
 
@@ -250,7 +251,7 @@
                             <div class="headerarea__component">
                                 <div class="headerarea__right">
                                     <div class="headerarea__button">
-                                        <a class="default__button" href="contact" target="_blank">GET A FREE QUOTE</a>
+                                        <a class="default__button" href="contact">GET A FREE QUOTE</a>
                                     </div>
                                 </div>
                             </div>
@@ -282,12 +283,13 @@
             </div>
         </header>
 
+
         <!-- Start Offcanvas header menu -->
 
         <div class="offcanvas__header">
             <div class="offcanvas__inner">
                 <div class="offcanvas__logo">
-                    <a class="offcanvas__logo_link" href="/" target="_blank">
+                    <a class="offcanvas__logo_link" href="/">
                         <img src="assets/img/logo/full-logo.svg" alt="Digitalminds-logo" class="dark-mode">
                         <img src="assets/img/logo/header/logo-local-host new.svg" alt="Digitalminds-logo"
                             class="light-mode">
@@ -303,48 +305,47 @@
                             <a class="offcanvas__menu_item" href="javascript:void(0);">Pages</a>
                             <ul class="offcanvas__sub_menu">
                                 <li class="offcanvas__sub_menu_li"><a href="blog"
-                                    target="_blank" class="offcanvas__sub_menu_item">Blog</a></li>
+                                        class="offcanvas__sub_menu_item">Blog</a></li>
                                 <li class="offcanvas__sub_menu_li"><a href="team"
-                                    target="_blank" class="offcanvas__sub_menu_item">Team</a></li>
+                                        class="offcanvas__sub_menu_item">Team</a></li>
                                 <li class="offcanvas__sub_menu_li"><a href="project"
-                                    target="_blank" class="offcanvas__sub_menu_item">Projects</a></li>
+                                        class="offcanvas__sub_menu_item">Projects</a></li>
                                 <!-- <li class="offcanvas__sub_menu_li"><a href="project-details.html"
                                         class="offcanvas__sub_menu_item">Project Details</a></li> -->
                             </ul>
                         </li>
                         <li class="offcanvas__menu_li">
-                            <a class="offcanvas__menu_item" href="services" target="_blank">Services</a>
+                            <a class="offcanvas__menu_item" href="services">Services</a>
                             <ul class="offcanvas__sub_menu">
                                 <li class="offcanvas__sub_menu_li"><a href="web-development-services"
-                                    target="_blank" class="offcanvas__sub_menu_item">Web Development</a></li>
+                                        class="offcanvas__sub_menu_item">Web Development</a></li>
                                 <li class="offcanvas__sub_menu_li"><a href="software-development-services"
-                                    target="_blank" class="offcanvas__sub_menu_item">Software Development</a></li>
+                                        class="offcanvas__sub_menu_item">Software Development</a></li>
                                 <li class="offcanvas__sub_menu_li"><a href="mobile-app-development-services"
-                                    target="_blank" class="offcanvas__sub_menu_item">App Development</a></li>
+                                        class="offcanvas__sub_menu_item">App Development</a></li>
                                 <li class="offcanvas__sub_menu_li"><a href="game-development-services"
-                                    target="_blank" class="offcanvas__sub_menu_item">Game Development</a></li>
+                                        class="offcanvas__sub_menu_item">Game Development</a></li>
                                 <li class="offcanvas__sub_menu_li"><a href="digital-marketing-services"
-                                    target="_blank" class="offcanvas__sub_menu_item">Digtal Marketing</a></li>
+                                        class="offcanvas__sub_menu_item">Digtal Marketing</a></li>
                                 <li class="offcanvas__sub_menu_li"><a href="ui-ux-design"
-                                    target="_blank" class="offcanvas__sub_menu_item">UI/UX Designer</a></li>
+                                        class="offcanvas__sub_menu_item">UI/UX Designer</a></li>
                                 <li class="offcanvas__sub_menu_li"><a href="network-services"
-                                    target="_blank" class="offcanvas__sub_menu_item">IT Specialist</a></li>
+                                        class="offcanvas__sub_menu_item">IT Specialist</a></li>
                                 <li class="offcanvas__sub_menu_li"><a href="wordpress-development-services"
-                                    target="_blank" class="offcanvas__sub_menu_item">WordPress Development</a></li>
+                                        class="offcanvas__sub_menu_item">WordPress Development</a></li>
                                 <li class="offcanvas__sub_menu_li"><a href="content-creater"
-                                    target="_blank" class="offcanvas__sub_menu_item">Content Creater</a></li>
+                                        class="offcanvas__sub_menu_item">Content Creater</a></li>
                                 <li class="offcanvas__sub_menu_li"><a href="seo-services"
-                                    target="_blank" class="offcanvas__sub_menu_item">Search Engine Optimization(SEO)</a></li>
+                                        class="offcanvas__sub_menu_item">Search Engine Optimization(SEO)</a></li>
                             </ul>
                         </li>
-                        <li class="offcanvas__menu_li"><a class="offcanvas__menu_item" href="about" target="_blank">About</a></li>
-                        <li class="offcanvas__menu_li"><a class="offcanvas__menu_item" href="contact" target="_blank">Contact</a>
+                        <li class="offcanvas__menu_li"><a class="offcanvas__menu_item" href="about">About</a></li>
+                        <li class="offcanvas__menu_li"><a class="offcanvas__menu_item" href="contact">Contact</a>
                         </li>
                     </ul>
                 </nav>
             </div>
         </div>
-
 
         <!-- End Offcanvas header menu -->
 
